--- a/app/src/main/res/layout/activity_contact_detail.xml
+++ b/app/src/main/res/layout/activity_contact_detail.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
+    android:gravity="center"
     tools:context=".ContactDetailActivity">
 
     <!-- 프로필 이미지 -->
@@ -23,6 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:gravity="center"
         android:text="Name"
         android:textSize="18sp"
         android:textStyle="bold" />
@@ -34,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="Phone"
+        android:gravity="center"
         android:textSize="16sp" />
 
     <!-- 인스타그램 표시 -->
@@ -42,6 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Instagram"
+        android:gravity="center"
         android:textSize="16sp" />
 
 </LinearLayout>
