--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -1,32 +1,8 @@
-<LinearLayout
+<ImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/bookImage"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="16dp">
-
-    <ImageView
-        android:id="@+id/bookImage"
-        android:layout_width="100dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="8dp"
-        android:scaleType="fitXY" />
-
-    <TextView
-        android:id="@+id/bookTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/bookAuthor"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="14sp"
-        android:textColor="#888888"
-        android:layout_marginTop="4dp" />
-</LinearLayout>
+    android:layout_height="150dp"
+    android:scaleType="centerCrop"
+    android:layout_margin="4dp"
+    />
