--- a/app/src/main/res/layout/add_contact.xml
+++ b/app/src/main/res/layout/add_contact.xml
@@ -9,17 +9,17 @@
         android:id="@+id/editName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Name/Nickname" />
+        android:hint="이름" />
 
     <EditText
         android:id="@+id/editPhone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Phone Number (010-xxxx-xxxx)" />
+        android:hint="전화번호" />
 
     <EditText
         android:id="@+id/editInsta"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Instagram (@으로 시작)" />
+        android:hint="인스타그램 (@으로 시작)" />
 </LinearLayout>
