--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="pastel_yellow_primary">#FFF9C4</color> <!-- 메인 노란색 -->
-    <color name="pastel_yellow_dark">#F6E497</color>    <!-- 어두운 노란색 -->
-    <color name="pastel_yellow_accent">#FFECB3</color>  <!-- 강조 노란색 -->
+    <color name="pastel_blue_primary">#D1E8FC</color> <!-- 메인 blue -->
+    <color name="pastel_blue_dark">#A2D2FF</color>    <!-- 어두운 blue-->
+    <color name="pastel_blue_accent">#8FC9FF</color>  <!-- 강조 blue-->
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
 </resources>
