feat : 연락처 상세 정보 수정 기능 추가

--- a/app/src/main/res/layout/activity_contact_detail.xml
+++ b/app/src/main/res/layout/activity_contact_detail.xml
@@ -11,41 +11,61 @@
     <!-- 프로필 이미지 -->
     <ImageView
         android:id="@+id/profileImageView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="175dp"
+        android:layout_height="166dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:src="@drawable/default_profile"
         android:contentDescription="Profile Image" />
 
-    <!-- 이름 표시 -->
-    <TextView
-        android:id="@+id/detailName"
+    <!-- Button for uploading photo, placed above the text boxes -->
+    <Button
+        android:id="@+id/buttonChoosePhoto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/dark_gray"
+        android:text="Choose Photo" />
+
+    <!-- 이름 수정 -->
+    <EditText
+        android:id="@+id/editTextName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="48dp"
         android:gravity="center"
-        android:text="Name"
+        android:textColor="@color/dark_gray"
+        android:textColorHint="@color/gray"
+        android:text="이름"
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <!-- 전화번호 표시 -->
-    <TextView
-        android:id="@+id/detailPhone"
+    <!-- 전화번호 수정 -->
+    <EditText
+        android:id="@+id/editTextPhone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="Phone"
+        android:layout_marginBottom="48dp"
         android:gravity="center"
-        android:textSize="16sp" />
+        android:textColor="@color/dark_gray"
+        android:textColorHint="@color/gray"
+        android:text="전화번호"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
-    <!-- 인스타그램 표시 -->
-    <TextView
-        android:id="@+id/detailInsta"
+    <!-- 인스타그램 수정 -->
+    <EditText
+        android:id="@+id/editTextInsta"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Instagram"
+        android:layout_marginBottom="48dp"
         android:gravity="center"
-        android:textSize="16sp" />
+        android:textColor="@color/dark_gray"
+        android:textColorHint="@color/gray"
+        android:text="북스타그램"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
