--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="pastel_blue_dark">#A2D2FF</color>    <!-- 어두운 blue-->
     <color name="pastel_blue_accent">#8FC9FF</color>  <!-- 강조 blue-->
     <color name="white">#FFFFFF</color>
+    <color name="gray">#dee2e6</color>
+    <color name="dark_gray">#808080</color>
     <color name="black">#000000</color>
 </resources>
