--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -5,17 +5,27 @@
     android:orientation="horizontal"
     android:padding="16dp">
 
+    <!-- ImageView for Contact's Photo -->
+    <ImageView
+        android:id="@+id/contactImage"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:scaleType="centerCrop"
+        android:padding="5dp"/>
+
     <TextView
         android:id="@+id/contactName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="16sp" />
+        android:textSize="18sp" />
 
+<!--
     <TextView
         android:id="@+id/contactPhone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp" />
+-->
 
 </LinearLayout>
