--- a/app/src/main/res/layout/dialog_image_selection.xml
+++ b/app/src/main/res/layout/dialog_image_selection.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:rowCount="3"
@@ -18,7 +17,19 @@
         android:src="@drawable/image1"
         android:contentDescription="@string/image_1"
         android:layout_row="0"
-        android:layout_column="0"/>
+        android:layout_column="0"
+        android:clickable="true"/>
+    <!-- Default Profile Image -->
+    <ImageView
+        android:id="@+id/image1"
+        android:layout_width="95dp"
+        android:layout_height="80dp"
+        android:layout_margin="10dp"
+        android:src="@drawable/image1"
+        android:contentDescription="@string/image_1"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:clickable="true"/>
 
     <!-- Image 2 -->
     <ImageView
@@ -30,7 +41,7 @@
         android:contentDescription="@string/image_2"
         android:layout_row="0"
         android:layout_column="1"
-        />
+        android:clickable="true"/>
 
     <!-- Image 3 -->
     <ImageView
@@ -40,9 +51,9 @@
         android:layout_margin="8dp"
         android:contentDescription="@string/image_3"
         android:src="@drawable/image3"
-        tools:ignore="GridLayout"
         android:layout_row="0"
-        android:layout_column="2"/>
+        android:layout_column="2"
+        android:clickable="true"/>
 
     <ImageView
         android:id="@+id/image4"
@@ -52,7 +63,8 @@
         android:src="@drawable/image4"
         android:contentDescription="@string/image_4"
         android:layout_row="1"
-        android:layout_column="0"/>
+        android:layout_column="0"
+        android:clickable="true"/>
 
     <!-- Image 5-->
     <ImageView
@@ -63,7 +75,8 @@
         android:src="@drawable/image5"
         android:contentDescription="@string/image_5"
         android:layout_row="1"
-        android:layout_column="1"/>
+        android:layout_column="1"
+        android:clickable="true"/>
 
     <!-- Image 6-->
     <ImageView
@@ -74,5 +87,6 @@
         android:src="@drawable/image6"
         android:contentDescription="@string/image_6"
         android:layout_row="1"
-        android:layout_column="2"/>
+        android:layout_column="2"
+        android:clickable="true"/>
 </GridLayout>
