--- a/app/src/main/res/layout/fragment_contact_detail.xml
+++ b/app/src/main/res/layout/fragment_contact_detail.xml
@@ -68,4 +68,16 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
+    <!-- Button for uploading photo, placed above the text boxes -->
+    <Button
+        android:id="@+id/buttonSave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/pastel_blue_dark"
+        android:textColor="@color/white"
+        android:text="Save"
+        android:textSize="18sp"/>
+
 </LinearLayout>
