--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -10,22 +10,25 @@
         android:id="@+id/contactImage"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:layout_marginEnd="16dp"
         android:scaleType="centerCrop"
         android:padding="5dp"/>
 
-    <TextView
-        android:id="@+id/contactName"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="18sp" />
+        android:layout_weight="1">
 
-<!--
-    <TextView
-        android:id="@+id/contactPhone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="14sp" />
--->
+        <TextView
+            android:id="@+id/contactName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:text="Contact Name"
+            android:ellipsize="end"
+            android:maxLines="1"/>
+
+    </LinearLayout>
 
 </LinearLayout>
