feat : snow icon

--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal"
     android:padding="16dp">
 
-    <!-- ImageView for Contact's Photo -->
+    <!-- ImageView for com.example.bookapp.tab1.Contact's Photo -->
     <ImageView
         android:id="@+id/contactImage"
         android:layout_width="80dp"
