--- a/app/src/main/res/layout/fragment_contact_detail.xml
+++ b/app/src/main/res/layout/fragment_contact_detail.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:gravity="center"
-    tools:context=".ContactDetailFragment">
+    tools:context=".tab1.ContactDetailFragment">
 
     <!-- 프로필 이미지 -->
     <ImageView
