--- a/app/src/main/res/layout/add_archive_popup.xml
+++ b/app/src/main/res/layout/add_archive_popup.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:padding="30dp"
     android:layout_gravity="center"
+    android:maxHeight="600dp"
     >
 
     <!-- 이미지 영역 -->
