feat : delete button in contact detail page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="gray">#dee2e6</color>
     <color name="dark_gray">#808080</color>
     <color name="black">#000000</color>
+    <color name="red">#ff7171</color>
 </resources>
