--- a/app/src/main/res/layout/fragment_contact_detail.xml
+++ b/app/src/main/res/layout/fragment_contact_detail.xml
@@ -68,19 +68,38 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <!-- Button for uploading photo, placed above the text boxes -->
-    <Button
-        android:id="@+id/buttonSave"
-        android:layout_width="wrap_content"
+    <!-- Layout for Save and Delete buttons -->
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/pastel_blue_dark"
-        android:textColor="@color/white"
-        android:text="Save"
-        android:textSize="18sp"/>
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginBottom="32dp">
 
-    !-- 전화 및 인스타그램 버튼을 포함하는 하단 영역 -->
+        <!-- Delete Button -->
+
+        <!-- Save Button -->
+        <Button
+            android:id="@+id/buttonSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/pastel_blue_dark"
+            android:textColor="@color/white"
+            android:text="Save"
+            android:textSize="18sp"/>
+
+        <Button
+            android:id="@+id/buttonDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:backgroundTint="@color/red"
+            android:textColor="@color/white"
+            android:text="Delete"
+            android:textSize="18sp" />
+    </LinearLayout>
+
+    <!-- 전화 및 인스타그램 버튼을 포함하는 하단 영역 -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
