feat: Zoom-In, Zoom-Out 되는 ImageView로 수정

--- a/app/src/main/res/layout/fullscreen_image_layout.xml
+++ b/app/src/main/res/layout/fullscreen_image_layout.xml
@@ -5,9 +5,10 @@
     android:gravity="center"
     android:background="#000000">
 
-    <ImageView
+    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
         android:id="@+id/fullScreenImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitCenter" />
+        android:scaleType="centerInside"
+        android:background="#000000" />
 </LinearLayout>
