--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -1,17 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
     <!-- 달력 -->
     <CalendarView
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- 선택된 날짜 표시 -->
     <TextView
@@ -21,7 +21,10 @@
         android:text="선택된 날짜"
         android:textSize="16sp"
         android:layout_marginTop="16dp"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@id/calendarView"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     <!-- 일정 입력 -->
     <EditText
@@ -29,7 +32,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="일정을 입력하세요"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintTop_toBottomOf="@id/selectedDateTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- 일정 추가 버튼 -->
     <Button
@@ -37,7 +42,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="일정 추가"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/scheduleEditText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
     <!-- 등록된 일정 표시 -->
     <TextView
@@ -47,6 +56,22 @@
         android:text="등록된 일정이 여기에 표시됩니다."
         android:layout_marginTop="16dp"
         android:textSize="16sp"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@id/addScheduleButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</LinearLayout>
+    <!-- Millie's Library 버튼 -->
+    <ImageButton
+        android:id="@+id/millieButton"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_margin="16dp"
+        android:src="@drawable/millie_logo"
+        android:background="@drawable/circular_button"
+        android:contentDescription="Millie's Library"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
