feat : search bar

--- a/app/src/main/res/layout/fragment_contact_list.xml
+++ b/app/src/main/res/layout/fragment_contact_list.xml
@@ -20,6 +20,20 @@
         android:textSize="18sp"
         android:layout_margin="8dp"/>
 
+    <!-- 검색창 -->
+    <EditText
+        android:id="@+id/search_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Search Contacts"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginBottom="8dp"
+        android:padding="10dp"
+        android:background="@drawable/search_bar"
+        android:inputType="text"
+        android:drawablePadding="8dp"
+        android:textSize="16sp" />
+
     <!-- 연락처 목록 -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
