feat : search bar

--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -18,7 +18,7 @@
         android:id="@+id/selectedDateTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="선택된 날짜"
+        android:text="date"
         android:textSize="16sp"
         android:layout_marginTop="16dp"
         android:textColor="@android:color/black"
@@ -31,7 +31,7 @@
         android:id="@+id/scheduleEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="일정을 입력하세요"
+        android:hint="What is your schedule?"
         app:layout_constraintTop_toBottomOf="@id/selectedDateTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -41,7 +41,7 @@
         android:id="@+id/addScheduleButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="일정 추가"
+        android:text="Add schedule"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/scheduleEditText"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
         android:id="@+id/scheduleListTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="등록된 일정이 여기에 표시됩니다."
+        android:text="Today's schedules."
         android:layout_marginTop="16dp"
         android:textSize="16sp"
         android:textColor="@android:color/black"
