--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,4 +12,11 @@
         <item name="android:navigationBarColor">@color/pastel_blue_primary</item>
     </style>
 
+    <!-- 요일 텍스트 스타일 -->
+    <style name="CalendarWeekDayStyle">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/roboto_regular</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
